# crispr

./: docker-compose.yaml  guides_search.py  main.py  pam.py  pyproject.toml  test.fasta  test.json
tests/: test_guide_search.py
xl/worksheets/: sheet1.xml
